<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topBar"
        android:background="@color/colorPrimaryVariant"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pokeball"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:src="@drawable/pokeball_white" />

        <TextView
            android:id="@+id/name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/app_name" />
    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sigIn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/SignIn">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sigUp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/SignUp">

        </com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>

