<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/pokemon_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pokemon_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="30sp">
                </TextView>

                <TextView
                    android:id="@+id/pokemon_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="15sp">
                </TextView>

            </LinearLayout>

            <RelativeLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/hexagon_pokemon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/hexagon" />

                <ImageView
                    android:id="@+id/pokemon_sprit"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/pokemon_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.mikephil.charting.charts.RadarChart
                android:id="@+id/chart_radar"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/strengthWeakness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/strengths"
            android:background="@color/colorPrimaryVariant"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_strengths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/strengths" />

            <LinearLayout
                android:id="@+id/types_strengths"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weaknesses"
            android:background="@color/colorSecondary"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_weaknesses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/weakness" />

            <LinearLayout
                android:id="@+id/types_weakness"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bottom_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/compare">
    </Button>


</LinearLayout>